Use Path.of() instead of Paths.get()